# ReviewMgr

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
src/: app.rs  main.rs  utils_js.rs
src-js/: utils.js
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json  texcol_db.sqlite3
src-tauri/migrations/2024-01-20-053706_create_project/: up.sql
src-tauri/migrations/2024-01-23-150747_create_review/: down.sql  up.sql
src-tauri/src/: lazy_vars.rs  main.rs
src-tauri/src/file_manager/: mod.rs
src-tauri/src/project_manager/: mod.rs
src-tauri/src/project_manager/pmdb/: mod.rs  model.rs  schema.rs
src-tauri/src/texcol_preprocess/: analysis.rs  ast.rs  emit.rs  file_utils.rs  mod.rs  parse.rs
src-tauri/src/window_manager/: mod.rs
src/texcolrouters/: mod.rs  route_params.rs  strucs.rs
