[package]
name = "ReviewMgr-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
leptos_router = { version = "0.5.6", features = ["csr"] }
chrono = { version = "0.4.31", features = ["serde"] }
leptos_icons = "0.2.1"
icondata = "0.3.0"
web-sys = "0.3.67"


[workspace]
members = ["src-tauri"]
