[package]
name = "ReviewMgr"
version = "0.0.1"
description = "A lightweight (only ~10mb after installing on windows) manager for reviews."
authors = ["Qingxuan Lv"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0.7.0"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
lazy_static = "1.4.0"
nom = "7"
itertools = "0"
indoc = "2.0.4"
convert_case = "0"
ropey = "1.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
